<resources>
    <string name="app_name">Teamlines</string>
    <string name="action_settings">Settings</string>

    <!--twitter OAUTH Keys
    <string name="CONSUMER_KEY"></string>
    <string name="CONSUMER_SECRET"></string>
    -->

    <!--MLB team names-->
    <string name="arizona_diamondbacks">Arizona Diamondbacks</string>
    <string name="atlanta_braves">Atlanta Braves</string>
    <string name="baltimore_orioles">Baltimore Orioles</string>
    <string name="boston_red_sox">Boston Red Sox</string>
    <string name="chicago_white_sox">Chicago White Sox</string>
    <string name="chicago_cubs">Chicago Cubs</string>
    <string name="cincinnati_reds">Cincinnati Reds</string>
    <string name="cleveland_indians">Cleveland Indians</string>
    <string name="colorado_rockies">Colorado Rockies</string>
    <string name="detroit_tigers">Detroit Tigers</string>
    <string name="houston_astros">Houston Astros</string>
    <string name="kansas_city_royals">Kansas City Royals</string>
    <string name="los_angeles_angels">Los Angeles Angels</string>
    <string name="los_angeles_dodgers">Los Angeles Dodgers</string>
    <string name="miami_marlins">Miami Marlins</string>
    <string name="milwaukee_brewers">Milwaukee Brewers</string>
    <string name="minnesota_twins">Minnesota Twins</string>
    <string name="new_york_mets">New York Mets</string>
    <string name="new_york_yankees">New York Yankees</string>
    <string name="oakland_athletics">Oakland Athletics</string>
    <string name="philadelphia_phillies">Philadelphia Phillies</string>
    <string name="pittsburgh_pirates">Pittsburgh Pirates</string>
    <string name="san_diego_padres">San Diego Padres</string>
    <string name="san_francisco_giants">San Francisco Giants</string>
    <string name="seattle_mariners">Seattle Mariners</string>
    <string name="st_louis_cardinals">St. Louis Cardinals</string>
    <string name="tampa_bay_rays">Tampa Bay Rays</string>
    <string name="texas_rangers">Texas Rangers</string>
    <string name="toronto_blue_jays">Toronto Blue Jays</string>
    <string name="washington_nationals">Washington Nationals</string>

    <!--MLB twitter list slugs-->
    <string name="arizona_diamondbacks_slug">arizona-diamondbacks</string>
    <string name="atlanta_braves_slug">atlanta-braves</string>
    <string name="baltimore_orioles_slug">baltimore-orioles</string>
    <string name="boston_red_sox_slug">boston-red-sox</string>
    <string name="chicago_white_sox_slug">chicago-white-sox</string>
    <string name="chicago_cubs_slug">chicago-cubs</string>
    <string name="cincinnati_reds_slug">cincinnati-reds</string>
    <string name="cleveland_indians_slug">cleveland-indians</string>
    <string name="colorado_rockies_slug">colorado-rockies</string>
    <string name="detroit_tigers_slug">detroit-tigers</string>
    <string name="houston_astros_slug">houston-astros</string>
    <string name="kansas_city_royals_slug">kansas-city-royals</string>
    <string name="los_angeles_angels_slug">los-angeles-angels</string>
    <string name="los_angeles_dodgers_slug">los-angeles-dodgers</string>
    <string name="miami_marlins_slug">miami-marlins</string>
    <string name="milwaukee_brewers_slug">milwaukee-brewers</string>
    <string name="minnesota_twins_slug">minnesota-twins</string>
    <string name="new_york_mets_slug">new-york-mets</string>
    <string name="new_york_yankees_slug">new-york-yankees</string>
    <string name="oakland_athletics_slug">oakland-athletics</string>
    <string name="philadelphia_phillies_slug">philadelphia-phillies</string>
    <string name="pittsburgh_pirates_slug">pittsburgh-pirates</string>
    <string name="san_diego_padres_slug">san-diego-padres</string>
    <string name="san_francisco_giants_slug">san-francisco-giants</string>
    <string name="seattle_mariners_slug">seattle-mariners</string>
    <string name="st_louis_cardinals_slug">st-louis-cardinals</string>
    <string name="tampa_bay_rays_slug">tampa-bay-rays</string>
    <string name="texas_rangers_slug">texas-rangers</string>
    <string name="toronto_blue_jays_slug">toronto-blue-jays</string>
    <string name="washington_nationals_slug">washington-nationals</string>

    <!--NHL team names-->
    <string name="ottawa_senators">Ottawa Senators</string>
    <string name="buffalo_sabres">Buffalo Sabres</string>

    <!--NHL twitter list slugs-->
    <string name="ottawa_senators_slug">ottawa-senators</string>
    <string name="buffalo_sabres_slug">buffalo-sabres</string>

    <!--NBA team names-->
    <string name="atlanta_hawks">Atlanta Hawks</string>
    <string name="boston_celtics">Boston Celtics</string>
    <string name="brooklyn_nets">Brooklyn Nets</string>
    <string name="charlotte_hornets">Charlotte Hornets</string>
    <string name="chicago_bulls">Chicago Bulls</string>
    <string name="cleveland_cavaliers">Cleveland Cavaliers</string>
    <string name="dallas_mavericks">Dallas Mavericks</string>
    <string name="denver_nuggets">Denver Nuggets</string>
    <string name="detroit_pistons">Detroit Pistons</string>
    <string name="golden_state_warriors">Golden State Warriors</string>
    <string name="houston_rockets">Houston Rockets</string>
    <string name="indiana_pacers">Indiana Pacers</string>
    <string name="los_angeles_clippers">Los Angeles Clippers</string>
    <string name="los_angeles_lakers">Los Angeles Lakers</string>
    <string name="memphis_grizzlies">Memphis Grizzlies</string>
    <string name="miami_heat">Miami Heat</string>
    <string name="milwaukee_bucks">Milwaukee Bucks</string>
    <string name="minnesota_timberwolves">Minnesota Timberwolves</string>
    <string name="new_orleans_pelicans">New Orleans Pelicans</string>
    <string name="new_york_knicks">New York Knicks</string>
    <string name="oklahoma_city_thunder">Oklahoma City Thunder</string>
    <string name="orlando_magic">Orlando Magic</string>
    <string name="philadelphia_76ers">Philadelphia 76ers</string>
    <string name="phoenix_suns">Phoenix Suns</string>
    <string name="portland_trail_blazers">Portland Trail Blazers</string>
    <string name="sacramento_kings">Sacramento Kings</string>
    <string name="san_antonio_spurs">San Antonio Spurs</string>
    <string name="toronto_raptors">Toronto Raptors</string>
    <string name="utah_jazz">Utah Jazz</string>
    <string name="washington_wizards">Washington Wizards</string>

    <!--NBA twitter list slugs-->
    <string name="atlanta_hawks_slug">atlanta-hawks</string>
    <string name="boston_celtics_slug">boston-celtics</string>
    <string name="brooklyn_nets_slug">brooklyn-nets</string>
    <string name="charlotte_hornets_slug">charlotte-hornets</string>
    <string name="chicago_bulls_slug">chicago-bulls</string>
    <string name="cleveland_cavaliers_slug">cleveland-cavaliers</string>
    <string name="dallas_mavericks_slug">dallas-mavericks</string>
    <string name="denver_nuggets_slug">denver-nuggets</string>
    <string name="detroit_pistons_slug">detroit-pistons</string>
    <string name="golden_state_warriors_slug">golden-state-warriors</string>
    <string name="houston_rockets_slug">houston-rockets</string>
    <string name="indiana_pacers_slug">indiana-pacers</string>
    <string name="los_angeles_clippers_slug">los-angeles-clippers</string>
    <string name="los_angeles_lakers_slug">los-angeles-lakers</string>
    <string name="memphis_grizzlies_slug">memphis-grizzlies</string>
    <string name="miami_heat_slug">miami-heat</string>
    <string name="milwaukee_bucks_slug">milwaukee-bucks</string>
    <string name="minnesota_timberwolves_slug">minnesota-timberwolves</string>
    <string name="new_orleans_pelicans_slug">new-orleans-pelicans</string>
    <string name="new_york_knicks_slug">new-york-knicks</string>
    <string name="oklahoma_city_thunder_slug">oklahoma-city-thunder</string>
    <string name="orlando_magic_slug">orlando-magic</string>
    <string name="philadelphia_76ers_slug">philadelphia-76ers</string>
    <string name="phoenix_suns_slug">phoenix-suns</string>
    <string name="portland_trail_blazers_slug">portland-trail-blazers</string>
    <string name="sacramento_kings_slug">sacramento-kings</string>
    <string name="san_antonio_spurs_slug">san-antonio-spurs</string>
    <string name="toronto_raptors_slug">toronto-raptors</string>
    <string name="utah_jazz_slug">utah-jazz</string>
    <string name="washington_wizards_slug">washington-wizards</string>

    <!--Leagues-->
    <string name="nba">NBA</string>
    <string name="nhl">NHL</string>
    <string name="mlb">MLB</string>
    <string name="nfl">NFL</string>

    <!--Twitter list owner-->
    <string name="twitter_list_owner">MDias9</string>

</resources>
