<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mdd.teamlines.MainActivity" >

    <item
        android:id="@+id/baseball"
        android:icon="@drawable/baseball"
        android:title="@string/mlb"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item
        android:id="@+id/hockey"
        android:icon="@drawable/hockey"
        android:title="@string/nhl"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item
        android:id="@+id/basketball"
        android:icon="@drawable/basketball"
        android:title="@string/nba"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item
        android:id="@+id/football"
        android:icon="@drawable/football"
        android:title="@string/nfl"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
